RESOLVED FIXED181154
[macOS] On Retina displays, icon used as drag image for large image is scaled down
https://bugs.webkit.org/show_bug.cgi?id=181154
Summary [macOS] On Retina displays, icon used as drag image for large image is scaled...
mitz
Reported 2017-12-25 13:10:56 PST
To reproduce this bug, navigate to <https://apod.nasa.gov/apod/image/1712/ArcticGeminid_Sutie_3500.jpg> and drag the image out. The drag image is a JPEG file icon, but its size is 32 by 32 pixels regardless of display resolution. It should be 32 points so that on Retina displays it’s 64 by 64 pixels. I believe this is a regression, but not a recent one.
Attachments
Adjust the icon size for the display scale factor (1.59 KB, patch)
2017-12-25 14:06 PST, mitz
wenson_hsieh: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (2.60 MB, application/zip)
2017-12-25 15:14 PST, EWS Watchlist
no flags
mitz
Comment 1 2017-12-25 14:06:27 PST
Created attachment 330186 [details] Adjust the icon size for the display scale factor
EWS Watchlist
Comment 2 2017-12-25 15:14:41 PST
Comment on attachment 330186 [details] Adjust the icon size for the display scale factor Attachment 330186 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5829181 New failing tests: imported/w3c/web-platform-tests/service-workers/service-worker/ServiceWorkerGlobalScope/update.https.html
EWS Watchlist
Comment 3 2017-12-25 15:14:42 PST
Created attachment 330187 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
mitz
Comment 4 2017-12-25 15:36:18 PST
Thanks, Wenson! Fixed in <https://trac.webkit.org/r226292>.
Radar WebKit Bug Importer
Comment 5 2018-01-02 13:17:21 PST
Note You need to log in before you can comment on or make changes to this bug.