[macOS] On Retina displays, icon used as drag image for large image is scaled down https://bugs.webkit.org/show_bug.cgi?id=181154

Reviewed by Wenson Hsieh.

* page/DragController.cpp:
(WebCore::DragController::doImageDrag): When using an icon for the drag image, also adjust
  its size for the device scale factor, like we do in the not-icon case.



Canonical link: https://commits.webkit.org/197016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226292 268f45cc-cd09-0410-ab3c-d52691b4dbfc